crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__koruma_expansion_try_from_generic.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/constructors.rs
expression: rendered
---
#[doc = concat!(
    "Validators for the `", "_0", "` field of [`", "Wrapper", "`]: [`", "GenericRange",
    "`]."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum Wrapper0KorumaValidatorRef<'koruma, T> {
    GenericRange(&'koruma GenericRange<T>),
}
#[doc = concat!(
    "Validation errors for the `", "_0", "` field of [`", "Wrapper",
    "`].\n\nValidators: [`", "GenericRange", "`]."
)]
#[derive(Debug, Default)]
pub struct Wrapper0KorumaValidationError<T> {
    generic_range: Option<GenericRange<T>>,
}
impl<T> Wrapper0KorumaValidationError<T> {
    #[doc = concat!("Returns the failed `", "GenericRange", "` validator, if any.")]
    pub fn generic_range(&self) -> Option<&GenericRange<T>> {
        self.generic_range.as_ref()
    }
    #[doc = concat!("Returns all failed validators for `", "_0", "`.")]
    pub fn all(&self) -> impl Iterator<Item = Wrapper0KorumaValidatorRef<'_, T>> + '_ {
        [self.generic_range.as_ref().map(Wrapper0KorumaValidatorRef::GenericRange)]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.generic_range.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for [`", "Wrapper",
    "`].\n\nContains per-field error structs for ", "field: `_0`", "."
)]
#[derive(Debug, Default)]
pub struct WrapperKorumaValidationError<T> {
    _0: Wrapper0KorumaValidationError<T>,
}
impl<T> WrapperKorumaValidationError<T> {
    #[doc = concat!(
        "Returns validation errors for the `", "_0", "` field of [`", "Wrapper", "`]."
    )]
    pub fn _0(&self) -> &Wrapper0KorumaValidationError<T> {
        &self._0
    }
}
impl<T> core::ops::Deref for WrapperKorumaValidationError<T> {
    type Target = Wrapper0KorumaValidationError<T>;
    fn deref(&self) -> &Self::Target {
        &self._0
    }
}
impl<T> ::koruma::ValidationError for WrapperKorumaValidationError<T> {
    fn is_empty(&self) -> bool {
        self._0.is_empty()
    }
}
impl<T> ::koruma::ValidationIssues for WrapperKorumaValidationError<T> {
    fn issues(&self) -> ::std::vec::Vec<::koruma::ValidationIssue> {
        let mut __koruma_issues = ::std::vec::Vec::new();
        if self._0.generic_range().is_some() {
            __koruma_issues
                .push(
                    ::koruma::ValidationIssue::field(
                        "_0",
                        ::core::any::type_name::<GenericRange<T>>(),
                        None,
                        ::std::format!("validation failed for `{}`", "GenericRange"),
                        ::std::vec::Vec::new(),
                    ),
                );
        }
        __koruma_issues
    }
}
impl<T> Wrapper<T> {
    #[doc = concat!(
        "Validates all fields of `", "Wrapper",
        "` and returns an error struct containing all validation failures."
    )]
    pub fn validate(&self) -> Result<(), WrapperKorumaValidationError<T>> {
        let mut error = WrapperKorumaValidationError {
            _0: Wrapper0KorumaValidationError {
                generic_range: None,
            },
        };
        let mut has_error = false;
        let __field_value = &self.0;
        {
            let __koruma_builder = GenericRange::<T>::min(0).max(100);
            ::koruma::__private::assert_field_validator_ready::<
                _,
                T,
                GenericRange<T>,
            >(&__koruma_builder);
            let validator = ::koruma::__private::BuildValidator::build_validator(
                ::koruma::__private::CaptureValueRef::capture_value_ref(
                    __koruma_builder,
                    __field_value,
                ),
            );
            if !<GenericRange<
                T,
            > as ::koruma::Validate<T>>::validate(&validator, __field_value) {
                error._0.generic_range = Some(validator);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl<T> ::koruma::ValidateExt for Wrapper<T> {
    type Error = WrapperKorumaValidationError<T>;
    fn validate(&self) -> Result<(), WrapperKorumaValidationError<T>> {
        Self::validate(self)
    }
}
impl<T> ::koruma::__private::KorumaWasDerived for Wrapper<T> {}
impl<T> ::koruma::NewtypeValidation for Wrapper<T> {}
impl<T> ::koruma::NewtypeValue for Wrapper<T> {
    type Inner = T;
    fn as_inner(&self) -> &Self::Inner {
        &self.0
    }
    fn into_inner(self) -> Self::Inner
    where
        Self: Sized,
    {
        self.0
    }
    fn validate_inner(
        __koruma_newtype_inner_value: &Self::Inner,
    ) -> Result<(), Self::Error> {
        let mut error = WrapperKorumaValidationError {
            _0: Wrapper0KorumaValidationError {
                generic_range: None,
            },
        };
        let mut has_error = false;
        let __field_value = __koruma_newtype_inner_value;
        {
            let __koruma_builder = GenericRange::<T>::min(0).max(100);
            ::koruma::__private::assert_field_validator_ready::<
                _,
                T,
                GenericRange<T>,
            >(&__koruma_builder);
            let validator = ::koruma::__private::BuildValidator::build_validator(
                ::koruma::__private::CaptureValueRef::capture_value_ref(
                    __koruma_builder,
                    __field_value,
                ),
            );
            if !<GenericRange<
                T,
            > as ::koruma::Validate<T>>::validate(&validator, __field_value) {
                error._0.generic_range = Some(validator);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl<T> ::koruma::NewtypeTryFromInner for Wrapper<T> {
    fn try_from_inner(value: Self::Inner) -> Result<Self, Self::Error>
    where
        Self: Sized,
    {
        <Self as ::koruma::NewtypeValue>::validate_inner(&value)?;
        Ok(Self(value))
    }
}
impl<T> TryFrom<T> for Wrapper<T> {
    type Error = WrapperKorumaValidationError<T>;
    fn try_from(value: T) -> Result<Self, Self::Error> {
        let instance = Self(value);
        instance.validate()?;
        Ok(instance)
    }
}
