crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__koruma_expansion_try_from_generic_with_bounds.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/constructors.rs
expression: rendered
---
#[doc = concat!(
    "Validators for the `", "_0", "` field of [`", "BoundedWrapper", "`]: [`",
    "GenericRange", "`]."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum BoundedWrapper0KorumaValidatorRef<'koruma, T: Clone> {
    GenericRange(&'koruma GenericRange<T>),
}
#[doc = concat!(
    "Validation errors for the `", "_0", "` field of [`", "BoundedWrapper",
    "`].\n\nValidators: [`", "GenericRange", "`]."
)]
#[derive(Debug, Default)]
pub struct BoundedWrapper0KorumaValidationError<T: Clone> {
    generic_range: Option<GenericRange<T>>,
}
impl<T: Clone> BoundedWrapper0KorumaValidationError<T> {
    #[doc = concat!("Returns the failed `", "GenericRange", "` validator, if any.")]
    pub fn generic_range(&self) -> Option<&GenericRange<T>> {
        self.generic_range.as_ref()
    }
    #[doc = concat!("Returns all failed validators for `", "_0", "`.")]
    pub fn all(
        &self,
    ) -> impl Iterator<Item = BoundedWrapper0KorumaValidatorRef<'_, T>> + '_ {
        [
            self
                .generic_range
                .as_ref()
                .map(BoundedWrapper0KorumaValidatorRef::GenericRange),
        ]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.generic_range.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for [`", "BoundedWrapper",
    "`].\n\nContains per-field error structs for ", "field: `_0`", "."
)]
#[derive(Debug, Default)]
pub struct BoundedWrapperKorumaValidationError<T: Clone> {
    _0: BoundedWrapper0KorumaValidationError<T>,
}
impl<T: Clone> BoundedWrapperKorumaValidationError<T> {
    #[doc = concat!(
        "Returns validation errors for the `", "_0", "` field of [`", "BoundedWrapper",
        "`]."
    )]
    pub fn _0(&self) -> &BoundedWrapper0KorumaValidationError<T> {
        &self._0
    }
}
impl<T: Clone> core::ops::Deref for BoundedWrapperKorumaValidationError<T> {
    type Target = BoundedWrapper0KorumaValidationError<T>;
    fn deref(&self) -> &Self::Target {
        &self._0
    }
}
impl<T: Clone> ::koruma::ValidationError for BoundedWrapperKorumaValidationError<T> {
    fn is_empty(&self) -> bool {
        self._0.is_empty()
    }
}
impl<T: Clone> ::koruma::ValidationIssues for BoundedWrapperKorumaValidationError<T> {
    fn issues(&self) -> ::std::vec::Vec<::koruma::ValidationIssue> {
        let mut __koruma_issues = ::std::vec::Vec::new();
        if self._0.generic_range().is_some() {
            __koruma_issues
                .push(
                    ::koruma::ValidationIssue::field(
                        "_0",
                        ::core::any::type_name::<GenericRange<T>>(),
                        None,
                        ::std::format!("validation failed for `{}`", "GenericRange"),
                        ::std::vec::Vec::new(),
                    ),
                );
        }
        __koruma_issues
    }
}
impl<T: Clone> BoundedWrapper<T> {
    #[doc = concat!(
        "Validates all fields of `", "BoundedWrapper",
        "` and returns an error struct containing all validation failures."
    )]
    pub fn validate(&self) -> Result<(), BoundedWrapperKorumaValidationError<T>> {
        let mut error = BoundedWrapperKorumaValidationError {
            _0: BoundedWrapper0KorumaValidationError {
                generic_range: None,
            },
        };
        let mut has_error = false;
        let __field_value = &self.0;
        {
            let __koruma_builder = GenericRange::<T>::min(0).max(100);
            ::koruma::__private::assert_field_validator_ready::<
                _,
                T,
                GenericRange<T>,
            >(&__koruma_builder);
            let validator = ::koruma::__private::BuildValidator::build_validator(
                ::koruma::__private::CaptureValueRef::capture_value_ref(
                    __koruma_builder,
                    __field_value,
                ),
            );
            if !<GenericRange<
                T,
            > as ::koruma::Validate<T>>::validate(&validator, __field_value) {
                error._0.generic_range = Some(validator);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl<T: Clone> ::koruma::ValidateExt for BoundedWrapper<T> {
    type Error = BoundedWrapperKorumaValidationError<T>;
    fn validate(&self) -> Result<(), BoundedWrapperKorumaValidationError<T>> {
        Self::validate(self)
    }
}
impl<T: Clone> ::koruma::__private::KorumaWasDerived for BoundedWrapper<T> {}
impl<T: Clone> ::koruma::NewtypeValidation for BoundedWrapper<T> {}
impl<T: Clone> ::koruma::NewtypeValue for BoundedWrapper<T> {
    type Inner = T;
    fn as_inner(&self) -> &Self::Inner {
        &self.0
    }
    fn into_inner(self) -> Self::Inner
    where
        Self: Sized,
    {
        self.0
    }
    fn validate_inner(
        __koruma_newtype_inner_value: &Self::Inner,
    ) -> Result<(), Self::Error> {
        let mut error = BoundedWrapperKorumaValidationError {
            _0: BoundedWrapper0KorumaValidationError {
                generic_range: None,
            },
        };
        let mut has_error = false;
        let __field_value = __koruma_newtype_inner_value;
        {
            let __koruma_builder = GenericRange::<T>::min(0).max(100);
            ::koruma::__private::assert_field_validator_ready::<
                _,
                T,
                GenericRange<T>,
            >(&__koruma_builder);
            let validator = ::koruma::__private::BuildValidator::build_validator(
                ::koruma::__private::CaptureValueRef::capture_value_ref(
                    __koruma_builder,
                    __field_value,
                ),
            );
            if !<GenericRange<
                T,
            > as ::koruma::Validate<T>>::validate(&validator, __field_value) {
                error._0.generic_range = Some(validator);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl<T: Clone> ::koruma::NewtypeTryFromInner for BoundedWrapper<T> {
    fn try_from_inner(value: Self::Inner) -> Result<Self, Self::Error>
    where
        Self: Sized,
    {
        <Self as ::koruma::NewtypeValue>::validate_inner(&value)?;
        Ok(Self(value))
    }
}
impl<T: Clone> TryFrom<T> for BoundedWrapper<T> {
    type Error = BoundedWrapperKorumaValidationError<T>;
    fn try_from(value: T) -> Result<Self, Self::Error> {
        let instance = Self(value);
        instance.validate()?;
        Ok(instance)
    }
}
