crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__koruma_expansion_try_from_named_field_struct.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/constructors.rs
expression: rendered
---
#[doc = concat!(
    "Validators for the `", "value", "` field of [`", "Username", "`]: [`",
    "NonEmptyStringValidation", "`]."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum UsernameValueKorumaValidatorRef<'koruma> {
    NonEmptyStringValidation(&'koruma NonEmptyStringValidation),
}
#[doc = concat!(
    "Validation errors for the `", "value", "` field of [`", "Username",
    "`].\n\nValidators: [`", "NonEmptyStringValidation", "`]."
)]
#[derive(Debug, Default)]
pub struct UsernameValueKorumaValidationError {
    non_empty_string_validation: Option<NonEmptyStringValidation>,
}
impl UsernameValueKorumaValidationError {
    #[doc = concat!(
        "Returns the failed `", "NonEmptyStringValidation", "` validator, if any."
    )]
    pub fn non_empty_string_validation(&self) -> Option<&NonEmptyStringValidation> {
        self.non_empty_string_validation.as_ref()
    }
    #[doc = concat!("Returns all failed validators for `", "value", "`.")]
    pub fn all(&self) -> impl Iterator<Item = UsernameValueKorumaValidatorRef<'_>> + '_ {
        [
            self
                .non_empty_string_validation
                .as_ref()
                .map(UsernameValueKorumaValidatorRef::NonEmptyStringValidation),
        ]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.non_empty_string_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for [`", "Username",
    "`].\n\nContains per-field error structs for ", "field: `value`", "."
)]
#[derive(Debug, Default)]
pub struct UsernameKorumaValidationError {
    value: UsernameValueKorumaValidationError,
}
impl UsernameKorumaValidationError {
    #[doc = concat!(
        "Returns validation errors for the `", "value", "` field of [`", "Username",
        "`]."
    )]
    pub fn value(&self) -> &UsernameValueKorumaValidationError {
        &self.value
    }
}
impl core::ops::Deref for UsernameKorumaValidationError {
    type Target = UsernameValueKorumaValidationError;
    fn deref(&self) -> &Self::Target {
        &self.value
    }
}
impl ::koruma::ValidationError for UsernameKorumaValidationError {
    fn is_empty(&self) -> bool {
        self.value.is_empty()
    }
}
impl ::koruma::ValidationIssues for UsernameKorumaValidationError {
    fn issues(&self) -> ::std::vec::Vec<::koruma::ValidationIssue> {
        let mut __koruma_issues = ::std::vec::Vec::new();
        if self.value.non_empty_string_validation().is_some() {
            __koruma_issues
                .push(
                    ::koruma::ValidationIssue::field(
                        "value",
                        ::core::any::type_name::<NonEmptyStringValidation>(),
                        None,
                        ::std::format!(
                            "validation failed for `{}`", "NonEmptyStringValidation"
                        ),
                        ::std::vec::Vec::new(),
                    ),
                );
        }
        __koruma_issues
    }
}
impl Username {
    #[doc = concat!(
        "Validates all fields of `", "Username",
        "` and returns an error struct containing all validation failures."
    )]
    pub fn validate(&self) -> Result<(), UsernameKorumaValidationError> {
        let mut error = UsernameKorumaValidationError {
            value: UsernameValueKorumaValidationError {
                non_empty_string_validation: None,
            },
        };
        let mut has_error = false;
        let __field_value = &self.value;
        {
            let __koruma_builder = NonEmptyStringValidation::__koruma_builder();
            ::koruma::__private::assert_field_validator_ready::<
                _,
                String,
                NonEmptyStringValidation,
            >(&__koruma_builder);
            let validator = ::koruma::__private::BuildValidator::build_validator(
                ::koruma::__private::CaptureValueRef::capture_value_ref(
                    __koruma_builder,
                    __field_value,
                ),
            );
            if !<NonEmptyStringValidation as ::koruma::Validate<
                String,
            >>::validate(&validator, __field_value) {
                error.value.non_empty_string_validation = Some(validator);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl ::koruma::ValidateExt for Username {
    type Error = UsernameKorumaValidationError;
    fn validate(&self) -> Result<(), UsernameKorumaValidationError> {
        Self::validate(self)
    }
}
impl ::koruma::__private::KorumaWasDerived for Username {}
impl ::koruma::NewtypeValidation for Username {}
impl ::koruma::NewtypeValue for Username {
    type Inner = String;
    fn as_inner(&self) -> &Self::Inner {
        &self.value
    }
    fn into_inner(self) -> Self::Inner
    where
        Self: Sized,
    {
        self.value
    }
    fn validate_inner(
        __koruma_newtype_inner_value: &Self::Inner,
    ) -> Result<(), Self::Error> {
        let mut error = UsernameKorumaValidationError {
            value: UsernameValueKorumaValidationError {
                non_empty_string_validation: None,
            },
        };
        let mut has_error = false;
        let __field_value = __koruma_newtype_inner_value;
        {
            let __koruma_builder = NonEmptyStringValidation::__koruma_builder();
            ::koruma::__private::assert_field_validator_ready::<
                _,
                String,
                NonEmptyStringValidation,
            >(&__koruma_builder);
            let validator = ::koruma::__private::BuildValidator::build_validator(
                ::koruma::__private::CaptureValueRef::capture_value_ref(
                    __koruma_builder,
                    __field_value,
                ),
            );
            if !<NonEmptyStringValidation as ::koruma::Validate<
                String,
            >>::validate(&validator, __field_value) {
                error.value.non_empty_string_validation = Some(validator);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl ::koruma::NewtypeTryFromInner for Username {
    fn try_from_inner(value: Self::Inner) -> Result<Self, Self::Error>
    where
        Self: Sized,
    {
        <Self as ::koruma::NewtypeValue>::validate_inner(&value)?;
        Ok(Self { value: value })
    }
}
impl TryFrom<String> for Username {
    type Error = UsernameKorumaValidationError;
    fn try_from(value: String) -> Result<Self, Self::Error> {
        let instance = Self { value: value };
        instance.validate()?;
        Ok(instance)
    }
}
